--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html ng-app="todo" lang='en'>
     <head>
         <meta charset='utf-8'>
-        <title>TODO List</title>
-
+        <title>To Do List</title>
         <meta name='description' content='A simple app to track TODO items'>
         <meta name='author' content=''>
         <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'>
-
         <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400,400italic' rel='stylesheet' type='text/css'>
-        <link rel='stylesheet' type='text/css' href='css/main.css'>
+        <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7' crossorigin='anonymous'>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/controllers/todo_ctrl.js"></script>
+
     </head>
     <body>
 
@@ -17,9 +19,17 @@
             <h1>todos</h1>
         </header>
 
-        <main>
-            <form action='' method='post'>
-                <input type='text' class='new-todo' placeholder='What needs to be done?'>
+        <main ng-controller="ToDoItemsController as todo">
+
+<!--
+This should take the input value from its input and apply it to a new item. I'll
+probably need to model the value to a varible and then clear that variable when
+I'm done.
+1. Make a function in the controller that makes a new item called 'addNewItem'
+2. Make a variable called 'newItem'
+-->
+            <form name="new-item-form" ng-submit="todo.addNewItem(new-item-form)" action='' method='post'>
+                <input ng-model="todo.newItem" type='text' class='new-todo' placeholder='What needs to be done?'>
             </form>
 
             <ul class='items'>
@@ -69,7 +79,6 @@
         </main>
         <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-        <script type="text/javascript" src="js/todo-data.js"></script>
-        <script type="text/javascript" src="js/todo-ui.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
