--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no'>
         <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400,400italic' rel='stylesheet' type='text/css'>
         <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7' crossorigin='anonymous'>
+        <link rel='stylesheet' href='css/main.css'>
+
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/controllers/todo_ctrl.js"></script>
 
     </head>
     <body>
@@ -28,8 +28,8 @@ I'm done.
 1. Make a function in the controller that makes a new item called 'addNewItem'
 2. Make a variable called 'newItem'
 -->
-            <form name="new-item-form" ng-submit="todo.addNewItem(new-item-form)" action='' method='post'>
-                <input ng-model="todo.newItem" type='text' class='new-todo' placeholder='What needs to be done?'>
+            <form name="newItemForm" ng-submit="todo.addNewItem(newItemForm)">
+                <input ng-model="todo.newItem.text" type='text' class='new-todo' placeholder='What needs to be done?'>
             </form>
 
             <ul class='items'>
@@ -77,8 +77,11 @@ I'm done.
                 <button class='clear'>Clear completed</button>
             </footer>
         </main>
-        <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
+        <!-- <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
+        <script src="js/main.js"></script>
+        <script src="js/controllers/todo_ctrl.js"></script>
+        <script src="js/factories/todo_fact.js"></script>
+
     </body>
 </html>
