clear all working

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ I'm done.
                         <li><button class='show-completed'>Completed</button></li>
                     </ul>
                 </nav>
-                <button class='clear'>Clear completed</button>
+                <button ng-click="todo.deleteCompleted()" class='clear'>Clear completed</button>
             </footer>
         </main>
         <!-- <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
